docs: fix environment variables phrase

--- a/help/apps-and-integrations/how-to-build-an-app.mdx
+++ b/help/apps-and-integrations/how-to-build-an-app.mdx
@@ -39,7 +39,7 @@ All apps can be found under [`packages/app-store`](https://github.com/calcom/cal
 
 | ├──index.ts
 | ├──package.json
-| ├──.env.example -> Specify the environmental variables (ex. auth token, API secrets) that your app will need if it's applicable
+| ├──.env.example -> Specify the environment variables (ex. auth token, API secrets) that your app will need if it's applicable
 | ├──README.mdx -> Customize your app description. You can add an image slider as well.
 ```
 
